fixing alignment responsivity tbc

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -25,14 +25,14 @@
   box-sizing: border-box;
 }
 
+
 body {
   min-height: 100vh;
   margin-top: 100px;
   min-width: 100vw;
   padding: 0;
-  padding-bottom: 100px;
   background-size: cover;
-  background-color: black;
+  background-color: black !important;
   background-image: url('../images/tarotbg.webp');
   background-repeat: no-repeat; /* Adjust as needed */
   color: rgb(174, 255, 0);
@@ -1291,6 +1291,11 @@ footer {
 @media (max-width: 768px) {
   .card-name {
     max-width: 100%;
+  }
+
+  .accordion-body > .row {
+    margin: 0 20px 0 20px !important;
+    padding: 0 20px 0 20px !important;
   }
 
   .card-details-text {
